--- a/config/projections.json
+++ b/config/projections.json
@@ -7,12 +7,12 @@
   "app/controllers/api/*_controller.rb": {
     "command": "apicontroller",
     "alternate": "spec/controllers/api/%s_controller_spec.rb",
-    "template": "class Api::%SController < ApplicationController\n  respond_to :json\nend"
+    "template": "class Api::%SController < Api::BaseController\nend"
   },
   "app/assets/javascripts/models/*.js.coffee": {
     "command": "jmodel",
     "alternate": "spec/javascripts/models/%s_spec.js.coffee",
-    "template": "App.%S = Ep.Model.extend"
+    "template": "App.%S = DS.Model.extend"
   },
   "app/assets/javascripts/views/*.js.coffee": {
     "command": "jview",
@@ -39,6 +39,9 @@
   },
   "app/assets/javascripts/router.js.coffee": {
     "command": "jini"
+  },
+  "app/assets/javascripts/store.js.coffee": {
+    "command": "jstore"
   },
  "spec/javascripts/**/*_spec.js.coffee": {
     "command": "jspec",
