--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ development:
   <<: *default
   database: pinboard_development
 
-test:
+test: &test
   <<: *default
   database: pinboard_test
 
@@ -16,3 +16,6 @@ production:
   database: pinboard_production
   username: pinboard
   password: <%= ENV['PINBOARD_DATABASE_PASSWORD'] %>
+
+cucumber:
+  <<: *test
